fixed overlap of sidebar on mobile (admin panel)

--- a/src/Screens/Admin/Users.css
+++ b/src/Screens/Admin/Users.css
@@ -79,5 +79,6 @@
 @media screen and (max-width: 900px) {
 	.usersContainer {
 		margin: 10px;
+		padding-bottom: 20vh;
 	}
 }
